# LenearAlgebra

./: CMakeLists.txt
include/: Gauss.hpp  LU.hpp  Pivot.hpp  VecUtil.hpp  det.hpp
src/: CMakeLists.txt  Gauss.cpp  LU.cpp  Pivot.cpp  VecUtil.cpp  cond.cpp  det.cpp
tests/: CMakeLists.txt  LATests.cpp  Main.cpp
